Java 19, Target 3/2023 (4.27), Morningstar removed